tests/ui/suggestions/incorrect-variant-single-letter.stderr
error[E0599]: no variant or associated item named `b` found for enum `A` in the current scope
  --> $DIR/incorrect-variant-single-letter.rs:16:12
   |
LL | enum A {
   | ------ variant or associated item `b` not found for this enum
...
LL |     foo(A::b);
   |            ^ variant or associated item not found in `A`
   |
help: there is a variant with a similar name
   |
LL -     foo(A::b);
LL +     foo(A::B);
   |

error[E0599]: no variant or associated item named `c` found for enum `A` in the current scope
  --> $DIR/incorrect-variant-single-letter.rs:17:12
   |
LL | enum A {
   | ------ variant or associated item `c` not found for this enum
...
LL |     foo(A::c);
   |            ^ variant or associated item not found in `A`
   |
help: there is a variant with a similar name
   |
LL -     foo(A::c);
LL +     foo(A::C());
   |

error[E0599]: no variant or associated item named `d` found for enum `A` in the current scope
  --> $DIR/incorrect-variant-single-letter.rs:18:12
   |
LL | enum A {
   | ------ variant or associated item `d` not found for this enum
...
LL |     foo(A::d);
   |            ^ variant or associated item not found in `A`
   |
help: there is a variant with a similar name
   |
LL -     foo(A::d);
LL +     foo(A::D(/* i32 */));
   |

error[E0599]: no variant or associated item named `e` found for enum `A` in the current scope
  --> $DIR/incorrect-variant-single-letter.rs:19:12
   |
LL | enum A {
   | ------ variant or associated item `e` not found for this enum
...
LL |     foo(A::e);
   |            ^ variant or associated item not found in `A`
   |
help: there is a variant with a similar name
   |
LL -     foo(A::e);
LL +     foo(A::E {});
   |

error[E0599]: no variant or associated item named `f` found for enum `A` in the current scope
  --> $DIR/incorrect-variant-single-letter.rs:20:12
   |
LL | enum A {
   | ------ variant or associated item `f` not found for this enum
...
LL |     foo(A::f);
   |            ^ variant or associated item not found in `A`
   |
help: there is a variant with a similar name
   |
LL -     foo(A::f);
LL +     foo(A::F { x: /* value */ });
   |

error[E0599]: no variant or associated item named `b` found for enum `A` in the current scope
  --> $DIR/incorrect-variant-single-letter.rs:21:9
   |
LL | enum A {
   | ------ variant or associated item `b` not found for this enum
...
LL |     (A::b)();
   |         ^ variant or associated item not found in `A`
   |
help: there is a variant with a similar name
   |
LL -     (A::b)();
LL +     (A::B)();
   |

error[E0599]: no variant or associated item named `c` found for enum `A` in the current scope
  --> $DIR/incorrect-variant-single-letter.rs:22:9
   |
LL | enum A {
   | ------ variant or associated item `c` not found for this enum
...
LL |     (A::c)();
   |         ^ variant or associated item not found in `A`
   |
help: there is a variant with a similar name (notice the capitalization)
   |
LL -     (A::c)();
LL +     (A::C)();
   |

error[E0599]: no variant or associated item named `d` found for enum `A` in the current scope
  --> $DIR/incorrect-variant-single-letter.rs:23:9
   |
LL | enum A {
   | ------ variant or associated item `d` not found for this enum
...
LL |     (A::d)();
   |         ^ variant or associated item not found in `A`
   |
help: there is a variant with a similar name
   |
LL -     (A::d)();
LL +     (A::D)(/* i32 */);
   |

error[E0599]: no variant or associated item named `e` found for enum `A` in the current scope
  --> $DIR/incorrect-variant-single-letter.rs:24:9
   |
LL | enum A {
   | ------ variant or associated item `e` not found for this enum
...
LL |     (A::e)();
   |         ^ variant or associated item not found in `A`
   |
help: there is a variant with a similar name
   |
LL -     (A::e)();
LL +     (A::E {})();
   |

error[E0599]: no variant or associated item named `f` found for enum `A` in the current scope
  --> $DIR/incorrect-variant-single-letter.rs:25:9
   |
LL | enum A {
   | ------ variant or associated item `f` not found for this enum
...
LL |     (A::f)();
   |         ^ variant or associated item not found in `A`
   |
help: there is a variant with a similar name
   |
LL -     (A::f)();
LL +     (A::F { x: /* value */ })();
   |

error[E0599]: no variant or associated item named `b` found for enum `A` in the current scope
  --> $DIR/incorrect-variant-single-letter.rs:26:12
   |
LL | enum A {
   | ------ variant or associated item `b` not found for this enum
...
LL |     foo(A::b)();
   |            ^ variant or associated item not found in `A`
   |
help: there is a variant with a similar name
   |
LL -     foo(A::b)();
LL +     foo(A::B)();
   |

error[E0599]: no variant or associated item named `c` found for enum `A` in the current scope
  --> $DIR/incorrect-variant-single-letter.rs:27:12
   |
LL | enum A {
   | ------ variant or associated item `c` not found for this enum
...
LL |     foo(A::c)();
   |            ^ variant or associated item not found in `A`
   |
help: there is a variant with a similar name
   |
LL -     foo(A::c)();
LL +     foo(A::C())();
   |

error[E0599]: no variant or associated item named `d` found for enum `A` in the current scope
  --> $DIR/incorrect-variant-single-letter.rs:28:12
   |
LL | enum A {
   | ------ variant or associated item `d` not found for this enum
...
LL |     foo(A::d)();
   |            ^ variant or associated item not found in `A`
   |
help: there is a variant with a similar name
   |
LL -     foo(A::d)();
LL +     foo(A::D(/* i32 */))();
   |

error[E0599]: no variant or associated item named `e` found for enum `A` in the current scope
  --> $DIR/incorrect-variant-single-letter.rs:29:12
   |
LL | enum A {
   | ------ variant or associated item `e` not found for this enum
...
LL |     foo(A::e)();
   |            ^ variant or associated item not found in `A`
   |
help: there is a variant with a similar name
   |
LL -     foo(A::e)();
LL +     foo(A::E {})();
   |

error[E0599]: no variant or associated item named `f` found for enum `A` in the current scope
  --> $DIR/incorrect-variant-single-letter.rs:30:12
   |
LL | enum A {
   | ------ variant or associated item `f` not found for this enum
...
LL |     foo(A::f)();
   |            ^ variant or associated item not found in `A`
   |
help: there is a variant with a similar name
   |
LL -     foo(A::f)();
LL +     foo(A::F { x: /* value */ })();
   |

error: aborting due to 15 previous errors

For more information about this error, try `rustc --explain E0599`.
